--- a/compose/pytorch/docker-compose.yml
+++ b/compose/pytorch/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '2.3'
 
 services:
-    tensorflow:
-        image: tensorflow/tensorflow:2.0.0a0-gpu-py3-jupyter
+    pytorch:
+        image: pytorch:jupyter
         runtime: nvidia
         volumes:
-          - ~/docker_data/tfdata:/tf
+          - ~/docker_data/pytorch_data:/workspace
         ports:
           - 8888:8888
         restart: always
