--- a/compose/tensorflow/docker-compose.yml
+++ b/compose/tensorflow/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.3'
 
 services:
     tensorflow:
-        image: tensorflow/tensorflow:2.0.0a0-gpu-py3-jupyter
+        image: tensorflow/tensorflow:2.0.0b0-gpu-py3-jupyter
         runtime: nvidia
         volumes:
           - ~/docker_data/tfdata:/tf
